# Robot_Arm_and_my_system_for_sim

./: .gitignore  actionCommand.py  camera_transfer.py  fix_stuck_ros.sh  python_publisher.py
build_backup_20260416_034051/: CTestConfiguration.ini  catkin_make.cache  cmake_install.cmake
build_backup_20260416_034051/Manipulator/: Makefile
build_backup_20260416_034051/MotorUnion/: Makefile  cmake_install.cmake
build_backup_20260416_034051/Neck/: CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_backup_20260416_034051/Robot/: CTestConfiguration.ini  Makefile  cmake_install.cmake
build_backup_20260416_034051/Robot/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  robot_core-msg-extras.cmake.develspace.in  robot_core-msg-extras.cmake.installspace.in
build_backup_20260416_034051/Robot/cmake/: robot_core-genmsg-context.py
build_backup_20260416_034051/catkin_generated/installspace/: local_setup.fish  local_setup.sh  setup.fish  setup.sh
build_backup_20260416_034051/gtest/: CTestTestfile.cmake  cmake_install.cmake
build_backup_20260416_034051/gtest/googletest/: CTestTestfile.cmake  Makefile
devel/: .catkin  local_setup.sh
devel/include/robot_core/: ArmBatchTransform.h  ArmBatchTransformResponse.h
devel/lib/Project/: ProjectNode
devel/lib/pkgconfig/: robot_core.pc
devel_backup_20260416_034051/: .rosinstall
devel_backup_20260416_034051/include/robot_core/: ArmBatchTransformRequest.h  BatchTransform.h  BatchTransformRequest.h  BatchTransformResponse.h
src/: main.cpp  use.txt
src/Manipulator/: LeftArm.cpp  LeftArm.h  RightArm.cpp  RightArm.h
src/Manipulator/ArmInfo/: ArmInfo.cpp
src/MotorUnion/: MotorUnion.cpp  MotorUnion.h
src/Neck/: Neck.cpp
src/Robot/: Robot.cpp  Robot.h
src/dabc_optimizer/: CMakeLists.txt  package.xml  setup.py
src/image/: CMakeLists.txt  D456_test.py  README.md  config.yaml  cup_detector.py  package.xml  test_offline.py
src/image/launch/: multi_camera.launch
src/image/scripts/: aruco_id.py  head_xyz_detection.py  head_xyz_service_server.py  head_xyz_test_client.py  right_arm_xyz_detection.py
src/image/src/: __init__.py  depth_geometry.py  grounding_dino_detector.py  realsense_stream.py
src/image/srv/: GetObjectXYZ.srv
src/robot_ui/: CMakeLists.txt  package.xml
src/task_execution/: CMakeLists.txt  package.xml
src/task_manager/: CMakeLists.txt  Dockerfile  Dockerfile.gpu  M_DABC_implementation_record.txt  README_GPU_DOCKER.md  change_log.txt  docker-compose.gpu.yml  package.xml  scan_followup_tasks.json  scheduler_log.json  scheduler_terminal_output.txt  subtask_log.json  test.txt
src/task_manager/data/: eval_tasks.json  eval_tasks_format.md
src/task_manager/launch/: send_task_directly.launch
src/task_manager/scripts/: auto_input_node.py  high_level_node.py  main_input_node.py  old_llm_processor_node.py  scheduler_node.py  subtask_node.py  subtask_verifier.py
src/task_manager/src/task_module/: domain_catalog.py  llm_parser.py  subtask_parser.py  topology_map.py
src/voice/: CMakeLists.txt  check_mic.py  package.xml  test_mics.py
src/voice/config/: config.yaml
src/voice/docs/: architecture.md  setup_guide.md
src/voice/scripts/: assistant_reply_tts_node.py  assistant_reply_tts_node_host.py  tip_voice_node.py  voice_node.py
src/voice/src/: __init__.py  abu.onnx  intent_router.py  open_wake_word_detector.py  ptt_recorder.py  vad_recorder.py  wake_word_detector.py  whisper_transcriber.py
(+46 files in other folders)
