<?xml version="1.0"?>
<package format="2">
  <name>voice</name>
  <version>0.0.1</version>
  <description>
    語音辨識套件：Porcupine 喚醒詞（阿布）→ VAD 錄音 → OpenAI Whisper 語音轉文字。
  </description>

  <maintainer email="cidongcheng@example.com">CiDongCheng</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
